# graffiti

./: .eslintrc.cjs  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: rust.yml
api/: Cargo.toml
api/src/: lib.rs
backend/: Cargo.toml  index.html
backend/src/: api.rs  errors.rs  main.rs  model.rs  routes.rs
backend/src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
frontend/: app.js  index.html  style.css
src/: api.rs  errors.rs  main.rs  model.rs  routes.rs
tests/: quick_dev.rs
