[package]
name = "drawgan-backend"
authors = ["Dagan Martinez"]
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.15"
futures-util = "0.3.28"
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["macros","rt-multi-thread"] }
tokio-stream = { version = "0.1.12", features = ["sync"] }
tower-http = { version = "0.4.0", features = ["fs"] }
