[package]
name = "graffiti"
authors = ["Dagan Martinez"]
version = "0.1.0"
edition = "2021"
license = "MIT or Apache-2.0"

[dependencies]
axum = "0.6.15"
clap = { version = "4.2.5", features = ["derive"] }
futures-util = "0.3.28"
hyper = "0.14.26"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["macros","rt-multi-thread"] }
tokio-stream = { version = "0.1.12", features = ["sync"] }
tower-http = { version = "0.4.0", features = ["fs"] }

[profile.dev]
opt-level = 1
