[package]
name = "drawgan-backend"
authors = ["Dagan Martinez"]
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.15"
futures-util = "0.3.28"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = { version = "0.1.12", features = ["sync"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.0", features = ["fs"] }

[dev-dependencies]
anyhow = "1.0.70"
httpc-test = "0.1.1"
